[project]
name = "lubw-client"
version = "0.2.0"
description = "client to call sensor data from Landesamt für Umwelt Baden Würrtemberg (LUBW)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.1",
    "isort>=8.0.1",
    "mypy>=1.20.2",
    "numpy>=2.2.6",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.3",
    "pip-audit>=2.10.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.15.12",
    "ual",
]

[tool.uv.sources]
ual = { git = "https://github.com/urban-air-lab/common" }
