[project]
name = "lubw-client"
version = "0.2.0"
description = "client to call sensor data from Landesamt für Umwelt Baden Würrtemberg (LUBW)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "isort>=8.0.1",
    "mypy>=1.20.2",
    "numpy>=2.4.4",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.3",
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "ruff>=0.15.12",
    "ual",
]

[tool.uv.sources]
ual = { git = "https://github.com/urban-air-lab/common" }
